<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.ol3cesium</groupId>
        <artifactId>gwt-olcs</artifactId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>
    
    <modelVersion>4.0.0</modelVersion>
    <artifactId>gwt-olcs-test</artifactId>
    <description>OpenLayers3 and OL3-Cesium Wrapper fro GWT (Test)</description>
    
    <properties>
        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
        <gwt.version>2.7.0</gwt.version>
        <slf4j-version>1.7.5</slf4j-version>
    </properties>
    
    <packaging>war</packaging>
    
    <dependencies>
        <dependency>
            <groupId>org.cesiumjs</groupId>
            <artifactId>gwt-olcs-main</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <scope>provided</scope>
            <version>2.7.0</version>
        </dependency>
        <dependency>
            <groupId>org.cesiumjs</groupId>
            <artifactId>cesium-gwt-main</artifactId>
            <version>0.2.0</version>
        </dependency>
        
        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>
        
        <!-- =========================================================== -->
        <!-- ========================= GIN ============================= -->
        <!-- =========================================================== -->            
        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.inject.extensions</groupId>
            <artifactId>guice-assistedinject</artifactId>
            <version>3.0</version>
        </dependency>
    </dependencies>
    
    <build>
        <!--<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>-->
        <outputDirectory>war/WEB-INF/classes</outputDirectory>
        
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
                <configuration>
                    <warSourceExcludes>.gwt-tmp/**</warSourceExcludes>
                    <warSourceDirectory>war</warSourceDirectory>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>2.7.0</version>
                <configuration>
                    <inplace>true</inplace>
                    <module>org.ol3cesium.demo.GwtOlCsShowcase</module>
                    <runTarget>GwtOlCsShowcase.html</runTarget>
                    <warSourceDirectory>war</warSourceDirectory>
                    <disableCastChecking>true</disableCastChecking>
                    <disableClassMetadata>true</disableClassMetadata>
                    <hostedWebapp>${basedir}/war</hostedWebapp>
                    <sourceLevel>1.7</sourceLevel>
                    <extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>clean</goal>
                            <goal>compile</goal>
                            <goal>generateAsync</goal>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
<!--             GWT Maven Plugin 
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>2.7.0</version>
                <executions>
                    <execution>
                        <configuration>
                            <extraJvmArgs>-Xms1024M -Xmx2048M -XX:PermSize=256M -XX:MaxPermSize=512M</extraJvmArgs>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                 Plugin configuration. There are many available options, see gwt-maven-plugin documentation at codehaus.org 
                <configuration>
                    <runTarget>gwt-olcs.html</runTarget>
                    <hostedWebapp>${webappDirectory}</hostedWebapp>
                    <extraJvmArgs>-Xmx2048M -XX:PermSize=256M -XX:MaxPermSize=512M</extraJvmArgs>
                </configuration>
            </plugin>-->
        </plugins>
    </build>
</project>